# JavaSharedMemory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  jitpack.yml  settings.gradle
include/: jshm.h
src/main/java/cn/apisium/shm/: AbstractSharedMemory.java  CABI.java  SharedMemory.java
src/main/java/cn/apisium/shm/impl/: MmapSharedMemory.java  SystemVSharedMemory.java  WindowsSharedMemory.java
src/test/java/cn/apisium/shm/: SharedMemoryTest.java
test/: main.cpp
